# PhishingForScams

./: .dockerignore  .gitignore  LICENSE  README.md  config.yaml  kafka.bash  main_script.py  note.md  pyproject.toml  requirements.txt
.github/workflows/: documentation.yml
data/: example2.eml
docs/: README.md  requirements.txt
docs/source/: architecture.md  conf.py  developer.md  index.md  index.rst  oldtester.md
src/: __init__.py  email_service.py  emailparser.py  main.py  train_model.py
src/ai/: ai_trainer.py  config.yaml  email_service.py  train_model.py
src/db/: Dockerfile  pfs_stats.sql  phishing_for_scams_db.sql
src/email_parser/: emailparser.py
src/mailservice/: q_mail.sh  q_mail_p.py  requirements.txt
src/parser/: Dockerfile  email_parser.py  emailparser.py  requirements.txt
src/policer/: policy.py
src/q/: __init__.py  kafka_q.py  queue.py
src/utils/: kafka.sh  myconstants.py  pfs_logging.py
tests/: README.md  test_kafka_q.py  test_parser.py  test_sample.py  test_script.py  testparser.py
tests/ML_test/: edg_empty_email_body.in  edg_empty_email_body.out  edg_image_based_spam.in  edg_image_based_spam.out  edg_long_email_body.in  edg_long_email_body.out  edg_missing_subject.in  edg_missing_subject.out  neg_non_spam_phrases_in_spam.in  neg_non_spam_phrases_in_spam.out  neg_valid_non_spam.in  neg_valid_non_spam.out  pos_common_spam_phrases.in  pos_common_spam_phrases.out  pos_valid_spam.in  pos_valid_with_attatch.in  pos_valid_with_attatch.out  test_train_model.py
tests/data/: example1.eml  example3.eml  (+3 more)
utils/: myconstants.py
(+24 files in other folders)
