[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PhishingForScams"
dynamic = ["version"]
authors = [
  { name="sulphurcrested", email="144216809+sulphurcrested@users.noreply.github.com" },
  { name="githugh1", email="author@example.com" },
  { name="lbdoak", email="author@example.com" }
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "package.__version__"}

[project.urls]
Homepage = "https://github.com/githugh1/PhishingForScams"
Issues = "https://github.com/githugh1/PhishingForScams/issues"

[tool.pytest.ini_options]
pythonpath = "."
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
cache_dir = ".pytest_cache"